# sideBySideDiff.py

./: .gitlab-ci.yml  ReadMe.md  setup.cfg  sideBySideDiff.py
