[metadata]
name = sideBySideDiff
#version = 0.1
author = KOLANICH
url = https://github.com/KOLANICH/sideBySideDiff.py
description = A library to create 2-way side-by-side diffs for showing them in console
long_description = file: ReadMe.md
keywords = diff, 2-way-diff, compare, ANSI color codes, ECMA-45
license = Unlicense
classifiers =
	Programming Language :: Python
	Programming Language :: Python :: 3
	Development Status :: 4 - Beta
	Environment :: Other Environment
	Intended Audience :: Developers
	License :: Public Domain
	License :: Public Domain :: Unlicense
	Operating System :: OS Independent
	Topic :: Software Development :: Libraries :: Python Modules

[options]
install_requires =
	RichConsole @ git+https://github.com/KOLANICH/RichConsole.py.git
python_requires = >=3.4
zip_safe = True
py_modules = sideBySideDiff
setup_requires = setuptools>=44; wheel; setuptools_scm[toml]>=3.4.3
test_suite = tests.tests
